--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav id="navbar" class="nav">
         <ul class="nav-list">
             <li>
-                <a href="#about">about</a>
+                <a href="#welcome-section">about</a>
             </li>
             <li>
                 <a href="#projects">work</a>
