--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
         <p>How do you take your coffee?</p>
         <nav>
             <ul>
-                <li>
-                    <a id="profile-link" href="https://github.com/josh7bit" target="_blank" rel="noopener noreferrer "><i class="fab fa-github-square "></i><span>GitHub</span></a></li>
+                <li><a id="profile-link" href="https://github.com/josh7bit" target="_blank" rel="noopener noreferrer "><i class="fab fa-github-square "></i><span>GitHub</span></a></li>
                 <li><a href="https://www.linkedin.com/in/josnel-gabriel-liendo-diaz-b9a5b01b9/ " target="_blank" rel="noopener noreferrer "><i class="fab fa-linkedin "></i><span>Linkedin</span></a></li>
                 <li><i class="fas fa-envelope "></i><span>josnelgabriel@gmail.com</span></li>
             </ul>
