--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </a>
 
             <!-- Js Documentation -->
-            <a href="https://codepen.io/josh7bit/full/ZEyEXzZ" target="_blank" rel="noopener noreferrer" class="project">
+            <a href="https://josh7bit-js-documentation-es.netlify.app/" target="_blank" rel="noopener noreferrer" class="project">
                 <img src="./img/js-documentation-page-es.png" alt="Javascript Documentation - Spanish">
                 <p class="project-tile">
                     <span class="code">&lt;</span> Js Documentation - Spanish
