--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Josnel Liendo | Portafolio</title>
+    <title>Josnel Liendo | Portofolio</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
@@ -16,9 +16,6 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet" />
-
-    <!-- Fontsawesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 
     <!-- Own stylesheet -->
     <link rel="stylesheet" href="./css/style.css">
@@ -31,7 +28,7 @@
                 <a href="#welcome-section">about</a>
             </li>
             <li>
-                <a href="#projects">work</a>
+                <a href="#projects">projects</a>
             </li>
             <li>
                 <a href="#contact">contact</a>
@@ -50,11 +47,20 @@
         </header>
         <div class="projects-section-projects">
 
-            <!-- Tribute page -->
-            <a href="https://codepen.io/josh7bit/full/JjNzGWv" target="_blank" rel="noopener noreferrer" class="project">
-                <img src="./img/tribute-page.png" alt="tribute page image">
+            <!-- Markdown Previewerd -->
+            <a href="https://josh7bit-markdown-previewer.netlify.app/" target="_blank" rel="noopener noreferrer" class="project">
+                <img src="./img/markdown-previewer.jpg" alt="Markdown Previewer image">
                 <p class="project-tile">
-                    <span class="code">&lt;</span> Tribute page
+                    <span class="code">&lt;</span> Markdown Previewer
+                    <span class="code">&#47;&gt;</span>
+                </p>
+            </a>
+
+            <!-- Random Quote Machine -->
+            <a href="https://josh7bit-random-quote-machine.netlify.app/" target="_blank" rel="noopener noreferrer" class="project">
+                <img src="./img/random-quote-machine.jpg" alt="Random Quote Machine Image">
+                <p class="project-tile">
+                    <span class="code">&lt;</span> Random Quote Machine
                     <span class="code">&#47;&gt;</span>
                 </p>
             </a>
@@ -68,14 +74,6 @@
                 </p>
             </a>
 
-            <!-- Change color app -->
-            <a href="https://codepen.io/josh7bit/full/zYzxmvQ" target="_blank" rel="noopener noreferrer" class="project">
-                <img src="./img/change-color-app.png" alt="Change Color App Image">
-                <p class="project-tile">
-                    <span class="code">&lt;</span> Change Color App
-                    <span class="code">&#47;&gt;</span>
-                </p>
-            </a>
 
             <!-- Js Documentation -->
             <a href="https://josh7bit-js-documentation-es.netlify.app/" target="_blank" rel="noopener noreferrer" class="project">
@@ -104,6 +102,7 @@
                 </p>
             </a>
 
+
             <!--  -->
             <!-- <a href="" target="_blank" rel="noopener noreferrer" class="project">
                 <img src="" alt="">
@@ -116,7 +115,9 @@
 
         </div>
         <a href="https://codepen.io/josh7bit" target="_blank" class="projects-section-showmore">
-            Show more <i class="fas fa-angle-right"></i>
+            Show more <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+                <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+              </svg></i>
         </a>
     </section>
 
@@ -127,9 +128,15 @@
         <p>How do you take your coffee?</p>
         <nav>
             <ul>
-                <li><a id="profile-link" href="https://github.com/josh7bit" target="_blank" rel="noopener noreferrer "><i class="fab fa-github-square "></i><span>GitHub</span></a></li>
-                <li><a href="https://www.linkedin.com/in/josnel-gabriel-liendo-diaz-b9a5b01b9/ " target="_blank" rel="noopener noreferrer "><i class="fab fa-linkedin "></i><span>Linkedin</span></a></li>
-                <li><i class="fas fa-envelope "></i><span>josnelgabriel@gmail.com</span></li>
+                <li><a id="profile-link" href="https://github.com/josh7bit" target="_blank" rel="noopener noreferrer "><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                  </svg><span>GitHub</span></a></li>
+                <li><a href="https://www.linkedin.com/in/josnel-gabriel-liendo-diaz-b9a5b01b9/ " target="_blank" rel="noopener noreferrer "><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                    <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+                  </svg><span>Linkedin</span></a></li>
+                <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
+                  </svg><span>josnelgabriel@gmail.com</span></li>
             </ul>
         </nav>
     </footer>
