--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav id="navbar" class="nav">
         <ul class="nav-list">
             <li>
-                <a href="#welcome-section">about</a>
+                <a href="#welcome-section">Hello!</a>
             </li>
             <li>
                 <a href="#projects">projects</a>
@@ -52,6 +52,24 @@
                 <img src="./img/markdown-previewer.jpg" alt="Markdown Previewer image">
                 <p class="project-tile">
                     <span class="code">&lt;</span> Markdown Previewer
+                    <span class="code">&#47;&gt;</span>
+                </p>
+            </a>
+
+            <!-- To do list -->
+            <a href="https://josh7bit-markdown-previewer.netlify.app/" target="_blank" rel="noopener noreferrer" class="project">
+                <img src="./img/to-do-list.png" alt="To do list">
+                <p class="project-tile">
+                    <span class="code">&lt;</span> To do list
+                    <span class="code">&#47;&gt;</span>
+                </p>
+            </a>
+
+            <!-- Trapping Rain Water -->
+            <a href="https://trapping-rain-water.netlify.app/" target="_blank" rel="noopener noreferrer" class="project">
+                <img src="./img/Trapping water.jpg" alt="Trapping Rain Water">
+                <p class="project-tile">
+                    <span class="code">&lt;</span> Trapping Rain Water
                     <span class="code">&#47;&gt;</span>
                 </p>
             </a>
