--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <h2>
             Let's work together...
         </h2>
-        <p>How do you take your coffee?</p>
+<!--         <p>How do you take your coffee?</p> -->
         <nav>
             <ul>
                 <li><a id="profile-link" href="https://github.com/j-liendo" target="_blank" rel="noopener noreferrer "><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
